# lxi-rs

./: .gitignore  ARCHITECTURE.md  Cargo.toml  LICENSE.txt  README.md  README.tpl  conftest.py  coverage.sh  deny.toml  pre-release-hook.sh  requirements.txt  update_readme.sh
.devcontainer/: Dockerfile  devcontainer.json
.github/: dependabot.yml
.github/workflows/: coverage.yml  python.yml  rust.yml
app/: Cargo.toml  settings.toml
app/src/: device.rs  main.rs
client/: Cargo.toml  README.md
client/src/: client.rs  resource.rs
device/: Cargo.toml  README.md  coverage.sh
device/src/: frontpanel.rs  lib.rs  lock.rs  session.rs  status.rs  trigger.rs  util.rs
event/: Cargo.toml  README.md
event/src/: lib.rs
event/src/common/: mod.rs
event/src/server/: mod.rs
hislip/: Cargo.toml  README.md  coverage.sh
hislip/examples/: coverage.rs  echo.rs  hislip.rs  hislip_idn.rs  hislip_server.rs  server.rs
hislip/src/: errors.rs  lib.rs  messages.rs  server.rs  session.rs
hislip/src/client/: mod.rs
hislip/src/common/: descriptors.rs  errors.rs  messages.rs  mod.rs  stream.rs
hislip/src/protocol/: errors.rs  messages.rs
hislip/src/server/: auth.rs  config.rs  mod.rs  session.rs  stream.rs
hislip/src/server/session/: asynchronous.rs  mod.rs  synchronous.rs
hislip/tests/: conftest.py  test_hislip.py  test_hislip_v2.py
http/: Cargo.toml
http/examples/: auth.rs  cert.pem  create_csr.rs  identification.rs  key.pem
http/examples/http/: main.rs
http/examples/lxi-api/: main.rs  state.rs
http/schemas/: LXICertificateRef.xsd  LXICertificateRequest.xsd  LXIDeviceSpecificConfiguration.xsd  LXILiterals.xsd
http/src/: lib.rs
http/src/common/: mod.rs
http/src/common/lxi/: identification.rs  mod.rs
http/src/common/lxi/api/: certificate_list.rs  certificate_reference.rs  certificate_request.rs  common_configuration.rs  device_specific_configuration.rs  literals.rs  mod.rs  pending_details.rs  problem_details.rs
http/src/common/lxi/identification/: mod.rs
http/src/lxi/api/: auth.rs  mod.rs  xml.rs
http/src/lxi/identification/: functions.rs  mod.rs  xml.rs
http/src/server/: mod.rs
http/src/server/lxi/: common_configuration.rs  device_specific_configuration.rs  identification.rs  mod.rs  schemas.rs
http/src/server/lxi/api/: auth.rs  certificates.rs  common_configuration.rs  device_specific_configuration.rs  get_csr.rs  middleware.rs  mod.rs
http/src/server/lxi/identification/: mod.rs
http/tests/: conftest.py  test_api.py  test_auth.py  test_validate_xml.py
http/tests/xsd/: LXICertificateList.xsd  LXICommonConfiguration.xsd  LXIIdentification.xsd  LXIPendingDetails.xsd  LXIProblemDetails.xsd
instrument-device/: Cargo.toml
lxi-client/src/: lib.rs  resource.rs
lxi-common/: Cargo.toml
lxi-common/src/: lib.rs  security.rs
lxi-device/: Cargo.toml
lxi-device/src/: frontpanel.rs  lib.rs  lock.rs  util.rs
lxi-hislip/: Cargo.toml
lxi-hislip/src/: lib.rs
lxi-hislip/src/common/: errors.rs  messages.rs  mod.rs
lxi-hislip/src/server/: stream.rs
lxi-socket/: Cargo.toml
lxi-socket/examples/: client.rs  server.rs
lxi-socket/src/client/: mod.rs
lxi-socket/src/server/: mod.rs  util.rs
lxi-socket/tests/: device.rs
raw/: Cargo.toml  README.md
raw/examples/: raw.rs  scpi-raw.rs  scpi-tls.rs  serial.rs  server.rs
raw/src/: lib.rs
raw/src/client/: mod.rs
raw/src/server/: mod.rs  tls.rs
raw/tests/: conftest.py  device.rs  pytest.rs  test_socket.py
socket/: Cargo.toml  README.md
socket/examples/: client.rs  server.rs  telnet.rs
socket/src/: lib.rs
socket/src/client/: mod.rs
socket/src/server/: mod.rs  socket.rs  telnet.rs
socket/tests/: conftest.py  device.rs  test_socket.py  test_telnet.py  test_visa.py
telnet/: Cargo.toml
telnet/examples/: server.rs  telnet.rs
telnet/src/: lib.rs
telnet/src/server/: mod.rs
telnet/tests/: conftest.py  test_telnet.py
visa/: Cargo.toml  LICENSE-MIT  README.tpl
visa/src/: client.rs  lib.rs  resource_manager.rs
visa/src/resources/: mod.rs
vxi-11/: Cargo.toml  build.rs
vxi-11/examples/: echo_server.rs
vxi-11/goldsrc/: lib.rs
vxi-11/goldsrc/rpc/: client.rs  mod.rs  onc_rpc.rs  onc_rpc.x  portmap.x  service.rs  vxi11.rs
vxi-11/goldsrc/server/: mod.rs
vxi-11/src/: lib.rs
vxi-11/src/client/: mod.rs
vxi-11/src/common/onc_rpc/: mod.rs  record.rs
vxi-11/src/common/xdr/: basic.rs  mod.rs  onc_rpc.rs  portmapper.rs  vxi11.rs
vxi-11/src/protocol/: mod.rs  vxi11.x
vxi-11/src/rpc/: client.rs  mod.rs  onc_rpc.rs  portmap.rs  service.rs  vxi11.rs  vxi11.x
vxi-11/src/server/: mod.rs  portmapper.rs  rpc_service.rs  vxi11.rs
vxi-11/src/xdr/: mod.rs  onc_rpc.rs  portmapper.rs
vxi-11/tests-python/: test_rpc.py
vxi11/: .gitignore  Cargo.toml  README.md  coverage.sh
vxi11/examples/: coverage.rs  portmap.rs  server.rs  vxi11.rs
vxi11/src/: lib.rs
vxi11/src/client/: mod.rs  portmapper.rs  vxi11.rs
vxi11/src/common/: mod.rs
vxi11/src/common/onc_rpc/: mod.rs  record.rs  xdr.rs
vxi11/src/common/portmapper/: mod.rs  xdr.rs
vxi11/src/common/vxi11/: mod.rs  xdr.rs
vxi11/src/common/xdr/: basic.rs  mod.rs  onc_rpc.rs  portmapper.rs  vxi11.rs
vxi11/src/server/: mod.rs  portmapper.rs  vxi11.rs
vxi11/src/server/vxi11/: abort_service.rs  core_service.rs  intr_client.rs  mod.rs
vxi11/tests/: conftest.py  portmapper.rs  test_visa.py  test_vxi11.py
web/: Cargo.toml  PROTOCOL.md  README.md
web/db/: schema.sql
web/examples/: main.rs
web/examples/assets/css/: styles.css  themes.css
web/examples/assets/js/: script.js
web/examples/manual/: book.toml
web/examples/programming-manual/: book.toml
web/examples/templates/: base.hbs  content.hbs
web/examples/user-manual/src/: SUMMARY.md  chapter_1.md
web/src/: lib.rs
web/src/console/: websockets.rs
web/src/records/: article.rs  user.rs
web/src/routes/: articles.rs  mod.rs
web/src/routes/lxi/: mod.rs
web/src/templates/: error.rs  files.rs  mod.rs  welcome.rs
web/templates/: error.html  files.html  layout.html  welcome.html
web/templates/settings/: _interface.html  index.html
