license = "GPL-3.0-or-later"

[workspace]
members = [
    "visa",
    "device",
    "hislip",
    "raw",
    "telnet",
    "vxi11"
]

[workspace.package]
version = "0.1.0"
authors = ["Gustav Palmqvist <gustavp@gpa-robotics.com>"]
repository = "https://github.com/Atmelfan/lxi-rs"
edition = "2021"

[workspace.dependencies]
# Common dependencies
async-std = {version = "1.11", features = ["attributes"]}
async-listen = "0.2.1"
futures = {version = "0.3" }
log = { version = "0.4.17" }
byteorder = { version = "1.4" }

# Dev dependencies
femme = "2.2"
clap = { version = "4.0", features = ["derive"] }