[workspace]
members = ["device", "hislip", "raw", "telnet", "vxi11", "http"]

[workspace.package]
version = "0.1.0"
authors = ["Gustav Palmqvist <gustavp@gpa-robotics.com>"]
repository = "https://github.com/Atmelfan/lxi-rs"
edition = "2021"

[workspace.dependencies]
# Common dependencies
async-std = { version = "1.11", features = ["attributes"] }
async-listen = "0.2.1"
futures = { version = "0.3" }
log = { version = "0.4.17" }
byteorder = { version = "1.4" }

# Dev dependencies
femme = "2.2"
clap = { version = "4.0", features = ["derive"] }

# Documentation
document-features = "0.2.6"

[patch.crates-io]
quick-xml = { git = 'https://github.com/tafia/quick-xml.git', commit = "9f8ec4429e0325577f86e6e3b23a608ac931edf1" }
