[package]
name = "lxi-device"
version = "0.1.0"
authors = ["Gustav Palmqvist <gustavp@gpa-robotics.com>"]
repository = "https://github.com/Atmelfan/lxi-rs"
description = "LXI common support library"
edition = "2021"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = {version = "0.3", features = ["alloc"]}
spin = {version = "0.9.3", default-features = false, features = ["spin_mutex", "mutex"]}
log = { version = "0.4.17", features = ["kv_unstable"] }

[dev-dependencies]
async-std = {version = "1.11", features = ["attributes", "unstable"]}
femme = "2.2"

[features]
default = []
std = []