[package]
name = "lxi-device"
description = "LXI common support library"
license = "MIT OR Apache-2.0"
version = { workspace = true }
authors = { workspace = true }
edition = { workspace = true }
repository = { workspace = true }

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = { workspace = true, features = ["alloc"]}
spin = { version = "0.9.3", default-features = false, features = ["spin_mutex", "mutex"]}
log = { workspace = true, features = ["kv_unstable"] }

[dev-dependencies]
async-std = { workspace = true }
femme = { workspace = true } 
clap = { workspace = true }

[features]
default = []
std = []
experimental = []