[package]
name = "lxi-event"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
byteorder = "1.3"
bitfield = "0.13"

log = { version = "0.4.17", features = ["kv_unstable_std"] }
async-std = {version = "1.11", features = ["attributes"]}
futures = "0.3"

[dependencies.lxi-device]
path = "../device"
version = "0.1.0"