[package]
name = "lxi-event"
description = "LXI event messaging library"
license = "GPL-3.0-or-later"
publish = false
version.workspace = true
authors.workspace = true
edition.workspace = true
repository.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
byteorder = "1.3"
bitfield = "0.14"

log = { version = "0.4.17", features = ["kv_unstable_std"] }
async-std = {version = "1.11", features = ["attributes"]}
futures = "0.3"

[dependencies.lxi-device]
path = "../device"
version = "0.1.0"