[package]
name = "lxi-hislip"
version = "0.1.0"
authors = ["Gustav Palmqvist <gustavp@gpa-robotics.com>"]
repository = "https://github.com/Atmelfan/lxi-rs"
description = "HiSLIP support library"
edition = "2021"
license = "GPL-3.0-or-later"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = { version = "0.4.17", features = ["kv_unstable_std"] }
async-std = {version = "1.11", features = ["attributes"]}
futures = {version = "0.3", features = ["unstable", "bilock"]}
byteorder = "1.3"
bitfield = "0.13"

[dependencies.lxi-device]
path = "../device"
version = "0.1.0"

[dev-dependencies]
femme = "2.2"
clap = { version = "3.1.12", features = ["derive"] }