[package]
name = "lxi-hislip"
description = "HiSLIP support library"
license = "GPL-3.0-or-later"
version = { workspace = true }
authors = { workspace = true }
edition = { workspace = true }
repository = { workspace = true }

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-std = { workspace = true }
futures = { workspace = true }
byteorder = { workspace = true }
log = { workspace = true, features = ["kv_unstable_std"] }
bitfield = "0.14"
async-rustls = { workspace = true, optional = true }
cfg-if = "1.0.0"

[dependencies.lxi-device]
path = "../device"
version = "0.1.0"

[dev-dependencies]
femme = { workspace = true }
clap = { workspace = true }

[features]
secure-capability = ["dep:async-rustls"]
