[package]
name = "http"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-std = { workspace = true }
log = { workspace = true, features = ["kv_unstable_std"] }
quick-xml = {version = "0.25.0", features = ["serialize"]}
async-trait = "0.1.41"

# Tide
tide = { version = "0.16.0", default-features = false }
tide-http-auth = { version = "0.5.0", optional = true }
serde = { version = "1.0", features = ["derive"] }
http-types  = "2.7.0"

[dev-dependencies]
femme = { workspace = true } 
clap = { workspace = true }

tide = { version = "0.16.0", default-features = true }
sqlx = { version = "0.6", features = ["runtime-async-std-rustls", "sqlite", "chrono"] }


[features]
default = ["lxi-api"]
lxi-api = ["tide-http-auth"]