[package]
name = "http"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-std = { workspace = true }
futures = { workspace = true }
log = { workspace = true, features = ["kv_unstable_std"] }
quick-xml = { version = "0.26.0", features = ["serialize"] }
async-trait = "0.1"
strum = { version = "0.24", features = ["derive"] }

# Tide
tide = { version = "0.16.0", default-features = false, features = ["h1-server"]}
tide-rustls = { version = "0.3.0", optional = true }
serde = { version = "1.0", features = ["derive"] }

# LXI-API
base64 = { version = "0.13", optional = true }
uuid = { version = "1.2", features = ["v4"] }

#
document-features = { workspace = true }

[dev-dependencies]
femme = { workspace = true }
clap = { workspace = true }

tide = { version = "0.16.0", default-features = true }
sqlx = { version = "0.6", features = [
    "runtime-async-std-rustls",
    "sqlite",
    "chrono",
] }


[features]
default = ["lxi-api", "tls"]

#! 
lxi-api = ["dep:base64", "tls"]
tls = ["dep:tide-rustls"]

#! ### HiSLIP
#! The following features are experimental
## HiSLIP v1.1
lxi-security = []

#! ### HiSLIP
#! The following features are experimental
## HiSLIP v1.1
lxi-hislip-v1_1 = []
## HiSLIP v2.0
lxi-hislip-v2_0 = ["lxi-hislip-v1_1"]


lxi-vxi11 = []
