[package]
name = "hislip"
version = "0.1.0"
authors = ["Atmelfan <gustavp@gpa-robotics.com>"]
edition = "2018"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-std = "1.11"
futures = "0.3"
#async-tls = "0.11"
async-rustls = "0.2"
log = "0.4"
byteorder = "1.3"
bitfield = "0.13"

[dev-dependencies]
structopt = "0.3"
env_logger = "0.9"
