[package]
name = "lxi-socket"
version = "0.1.0"
authors = ["gustavp"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-std = "1.10.0"
futures = "0.3.13"

async-tls = {version = "0.11.0", optional = true}

log = "0.4.4"
lxi-device = { path="../lxi-device" }

[features]
tls = ["async-tls"]