[package]
name = "rawsocket"
version = "0.1.0"
authors = ["gustavp"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-std = "1.9.0"
async-tls = { version = "0.11.0", optional = true }
futures = "0.3.13"
log = "0.4.4"

[features]
tls = ["async-tls"]