[package]
name = "lxi-socket"
version = "0.1.0"
authors = ["Gustav Palmqvist <gustavp@gpa-robotics.com>"]
edition = "2021"
license = "GPL-3.0-or-later"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-std = {version = "1.10.0", features = ["attributes"]}
async-listen = "0.2.1"
futures = "0.3.13"
log = {version = "0.4.4", features = ["kv_unstable_std"]}
pin-project-lite = "0.2"

[dependencies.lxi-device]
path = "../device"

[dependencies.async-tls]
version = "0.11.0"
optional = true

[dev-dependencies]
env_logger = "0.9.0"
clap = { version = "3.1.12", features = ["derive"] }

[features]
tls = ["async-tls"]