[package]
name = "lxi-telnet"
version = "0.1.0"
authors = ["Gustav Palmqvist <gustavp@gpa-robotics.com>"]
repository = "https://github.com/Atmelfan/lxi-rs"
description = "Raw LXI socket support library"
edition = "2021"
license = "GPL-3.0-or-later"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = {version = "0.3.13", default-features = false, features = ["alloc"]}
log = {version = "0.4.4", features = ["kv_unstable"]}
embedded-nal-async = "0.1.0"

[dependencies.lxi-device]
path = "../device"
version = "0.1.0"

[dependencies.libtelnet-rs]
#version = "2.0.0"
git = "https://github.com/Atmelfan/libtelnet-rs.git"

[dev-dependencies]
femme = "2.2"
clap = { version = "3.1.12", features = ["derive"] }

# Async stuff
async-std = {version = "1.12.0", features = ["attributes"]}
embedded-nal-async-std = "0.1.1"

[features]
std = []