[package]
name = "instrument-vxi11"
version = "0.1.0"
authors = ["gustavp"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-std = "1.9.0"
futures = "0.3.13"
onc-rpc = "0.2.2"
log = "0.4.14"


# XDR generation
[dependencies.xdr-codec]
version = "0.4.4"
features = ["bytecodec"]
[build-dependencies.xdrgen]
version = "0.4.4"

