[package]
name = "vxi11"
version = "0.1.0"
authors = ["gustavp"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3.13"
async-trait = "0.1.50"
log = "0.4.14"
pin-project = "1.0.5"
byteorder = "1.3"

# Async-std
[dependencies.async-std]
version = "1.9.0"
features = ["attributes"]

# XDR generation
[dependencies.xdr-codec]
version = "0.4.4"
features = ["bytecodec"]
[build-dependencies.xdrgen]
version = "0.4.4"

