[package]
name = "vxi11"
version = "0.1.0"
authors = ["gustavp"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-std = {version = "1.11", features = ["attributes"]}
async-listen = "0.2.1"
async-trait = "0.1"
futures = "0.3"
log = "0.4"
byteorder = "1.4"

[dependencies.lxi-device]
path="../lxi-device"
