[package]
name = "lxi-vxi11"
description = "VXI-11 support library"
license = "GPL-3.0-or-later"
version.workspace = true
authors.workspace = true
edition.workspace = true
repository.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-std = {version = "1.11", features = ["attributes"]}
async-listen = "0.2.1"
async-trait = "0.1"
futures = "0.3"
byteorder = "1.4"
log = { version = "0.4.17", features = ["kv_unstable_std"] }

[dependencies.lxi-device]
path="../device"
version = "0.1.0"

[dev-dependencies]
femme = "2.2"
clap = { version = "3.1.12", features = ["derive"] }


