[package]
name = "lxi-vxi11"
description = "VXI-11 support library"
license = "GPL-3.0-or-later"
version = { workspace = true }
authors = { workspace = true }
edition = { workspace = true }
repository = { workspace = true }

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-std = { workspace = true }
async-listen = { workspace = true }
futures = { workspace = true }
byteorder = { workspace = true }
log = { workspace = true, features = ["kv_unstable_std"] }
async-trait = "0.1"

[dependencies.lxi-device]
path="../device"
version = "0.1.0"

[dev-dependencies]
femme = { workspace = true } 
clap = { workspace = true }


