[package]
name = "lxi-web"
version = "0.1.0"
authors = ["Gustav Palmqvist <gustavp@gpa-robotics.com>"]
edition = "2021"
publish = false

[dependencies]
async-std = { version = "1.11.0", features = ["attributes"] }
tide = "0.16.0"
sqlx = { version = "0.3.5", features = ["sqlite", "chrono"] }
askama = { version = "0.11.1", features = ["with-tide"] }
serde = "1.0.137"
serde_urlencoded = "0.7.1"
askama_tide = "0.14.0"
async-sqlx-session = { version = "0.2.1", features = ["sqlite"] }
