[package]
name = "lxi-web"
version = "0.1.0"
authors = ["Gustav Palmqvist <gustavp@gpa-robotics.com>"]
edition = "2021"
publish = false

[dependencies]
# Tide
async-std = { version = "1.11.0", features = ["attributes"] }
tide = "0.16.0"
tide-websockets = { version = "0.4.0", optional = true }
sqlx = { version = "0.4.2", features = ["sqlite", "chrono"] }
async-sqlx-session = { version = "0.3.0", features = ["sqlite"] }

# Template engine
askama = { version = "0.11.1", features = ["with-tide"] }
askama_tide = "0.14.0"

# XML writer
xml-rs = "0.8.4"

# Misc.
serde = "1.0.137"
serde_urlencoded = "0.7.1"
byteorder = "1.3"

[dependencies.lxi-device]
path = "../device"
optional = true

[dev-dependencies]
pbkdf2 = "0.11"

[features]
default = ["websockets"]
websockets = ["tide-websockets", "lxi-device"]